# siem-to-ocsf

./: .gitignore  LICENSE  MAPPING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: app.js  index.html  ocsf-core.js  package.json  samples.js  style.css
samples/checkpoint/: antibot_c2_communication.json  ips_exploit_attempt.json  threat_emulation_malicious_doc.json
samples/cortex_xdr/: alert_credential_dumping.json  alert_internal_port_scan.json  alert_powershell_download.json
samples/fortisiem/: incident_data_exfil.json  incident_malware_outbreak.json  incident_ssh_bruteforce.json
samples/logscale/: detection_c2_beacon.json  detection_privilege_escalation.json  detection_ransomware_behavior.json
samples/malformed/: README.md  cortex_missing_alert_id.json  unknown_vendor.json
samples/sentinel/: alert_defender_malware.json  alert_impossible_travel.json  alert_suspicious_inbox_rule.json
samples/zscaler_zia/: web_anonymizer_allowed.json  web_malware_download.json  web_phishing_block.json
scripts/: make_cover.py  verify-web-demo.mjs
src/siem_to_ocsf/: __init__.py  cli.py  enrichment.py  models.py  ocsf.py  pipeline.py
src/siem_to_ocsf/parsers/: __init__.py  _common.py  checkpoint.py  cortex_xdr.py  fortisiem.py  logscale.py  sentinel.py  zscaler_zia.py
src/siem_to_ocsf/schema/: PROVENANCE.md  (+1 more)
tests/: conftest.py  test_cli.py  test_ocsf_mapping.py  test_parsers.py  test_validation.py
tests/golden/: checkpoint.ocsf.json  cortex_xdr.ocsf.json  fortisiem.ocsf.json  logscale.ocsf.json  sentinel.ocsf.json  zscaler_zia.ocsf.json
